--- a/dev/sass/_main.scss
+++ b/dev/sass/_main.scss
@@ -279,7 +279,6 @@ table.dataTable tbody tr td:first-child {
 
 .dropdown img {
 	height: 1em;
-	vertical-align: bottom;
 }
 
 .now-playing {
